--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/utils": "^8.7.0",
     "coveralls": "^3.1.1",
     "eslint": "^8.53.0",
     "jasmine-core": "~5.1.1",
